[package]
name = "codimd_downloader"
version = "0.1.0"
authors = ["8bit <freeman1218@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = [] }
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-dialog = "0.9.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tao = "0.34.3"
image = "0.25.6"
sysinfo = "0.35.0"
rm_rf = "0.6.2"
wildmatch = "2.4.0"
regex = "1.11.3"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
